banner search bar responsive

--- a/index.html
+++ b/index.html
@@ -144,14 +144,14 @@
               claims
             </p>
 
-            <div class="d-flex mt-4">
+            <div class="d-md-flex mt-4">
               <input
                 class="form-control w-100 pe-5 me-2"
                 placeholder="Search your services"
               />
               <button
                 type="button"
-                class="btn btn-primary font-poppins rounded py-2 px-4 fs-5"
+                class="btn btn-primary font-poppins rounded py-2 px-4 fs-5 mt-3 mt-md-0"
               >
                 Search
               </button>
